fixed css, wrong font

--- a/WebDev/Project6/fontscss.css
+++ b/WebDev/Project6/fontscss.css
@@ -10,6 +10,11 @@ body{
     margin: auto;
 }
 
+p{
+    text-decoration: none;
+    color: red;
+}
+
 h2{
     margin: 0;
     padding: 1px;
@@ -42,7 +47,7 @@ h5 {
         1px -1px 0 red,
         -1px -1px 0 red,
         1px -1px 0 red;
-    font-family: "guttural";
+    font-family: "necronomicon";
     font-size: 300%;
     font-weight: lighter;
 }
